# trading-openenv

./: .env.example  .gitignore  README.md  [Extra] baseline_agent.py  [Extra]ollama+mlx_train_trading_grpo.py  baseline_agent.py  ollama+mlx_train_trading_grpo.py
trading/: README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
trading/server/: Dockerfile  __init__.py  app.py  simulator.py  trading_environment.py
trading/server/templates/: index.html
trading/tasks/: __init__.py  graders.py  task_definitions.py
